# khal-notify

./: Cargo.toml  LICENSE  README.md
src/: main.rs
