[package]
name = "khal-notify"
version = "0.1.0"
authors = ["Mattori Birnbaum <mattori.birnbaum@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = "2.33"
time = "0.2"
regex = "1"
opener = "0.4"
directories = "3.0"
unicode-segmentation = "1.7"